feat: changed api, approve with backend. added login logic with backend, added system and user creation
